examples/force-app/objects/Spam_Analysis__c/Spam_Analysis__c.object-meta.xml
<CustomObject>
    <label>Spam Analysis</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spam Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>