examples/force-app/objects/Spam_Analysis__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Spam Analyses</relationshipLabel>
    <relationshipName>spam_analyses</relationshipName>
    <type>Lookup</type>
</CustomField>