examples/force-app/objects/Spam_Analysis__c/fields/Reason_for_score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_score__c</fullName>
    <label>Reason for score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>