examples/force-app/objects/Spam_Analysis__c/fields/Spam_Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Spam_Probability_Score__c</fullName>
    <label>Spam Probability Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>